tests/golden/networkpolicy.yaml
---
# Source: harness/templates/all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-api
  labels:
    app.kubernetes.io/name: api
    app.kubernetes.io/instance: test
    app.kubernetes.io/component: backend
    app.kubernetes.io/managed-by: Helm
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: api
      app.kubernetes.io/instance: test
  policyTypes: [Ingress, Egress]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: platform
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: shared
      ports:
        - protocol: TCP
          port: 5432
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: shared
      ports:
        - protocol: TCP
          port: 6379

---
# Source: harness/templates/all.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-api
  labels:
    app.kubernetes.io/name: api
    app.kubernetes.io/instance: test
    app.kubernetes.io/component: backend
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: api
    app.kubernetes.io/instance: test
  ports:
    - name: http
      port: 8080
      targetPort: http

---
# Source: harness/templates/all.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-api
  labels:
    app.kubernetes.io/name: api
    app.kubernetes.io/instance: test
    app.kubernetes.io/component: backend
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: api
      app.kubernetes.io/instance: test
  template:
    metadata:
      labels:
        app.kubernetes.io/name: api
        app.kubernetes.io/instance: test
    spec:
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: api
          image: ghcr.io/demo/be:1.0.0
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          ports:
            - name: http
              containerPort: 8080
          env:
            - name: DATABASE_HOST
              value: postgres.shared.svc.cluster.local:5432
            - name: REDIS_HOST
              value: redis.shared.svc.cluster.local:6379
